--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 基于图论约束的软件架构设计想法
 
 说明
-这是一个初步的软件架构设计想法，首次系统性地提出基于图论约束的软件架构形式化设计规约。我们记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
+这是一个初步的软件架构设计想法，首次系统性地提出基于图论约束的软件架构形式化设计规约。我们记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读
 
 设想:
 1. **公理化软件架构依赖关系**：将依赖倒置原则形式化为可验证的数学命题
