--- a/readme
+++ b/readme
@@ -1,7 +1,13 @@
 基于图论约束的软件架构设计想法
 
+
 说明
-这是一个初步的软件架构设计想法，首次系统性地提出基于图论约束的软件架构形式化设计规约。我们记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读
+
+这是一个初步的软件架构设计想法，首次系统性地提出基于图论约束的软件架构设计层级的规约。
+我记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
+它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读
+
+
 
 设想:
 1. **公理化软件架构依赖关系**：将依赖倒置原则形式化为可验证的数学命题
@@ -19,7 +25,7 @@
 
 2 本规约不直接约束的层面（What it does NOT govern）
 
-1. 具体算法实现
+1 具体算法实现
 2 所有权和内存管理策略
 3 并发和同步机制
 4 性能优化细节
@@ -27,7 +33,7 @@
 
 
 摘要
-本文档尝试提出一个基于图论构建的关系描述模式，旨在用于软件工程中，架构设计阶段的抽象数学建模，用于指导设计出便于形式化验证的软件微架构。
+本文档尝试提出一个基于图论构建的关系描述模式，旨在用于软件工程中，在架构设计阶段使用通用的抽象的数学建模，指导设计出优秀的软件架构。
 
 
 通俗表述:
