--- a/readme
+++ b/readme
@@ -8,11 +8,9 @@
 本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为架构设计这一抽象且主观的工作，进行数学上的指导。
 而不只是基于软件工程中的主观的评判和描述，和纯粹的经验。
 
-它约束软件架构设计的本身。
-
-它无法通用地描述所有的架构。
-
-它为软件架构设计提供参考指导。属于一个开发范式。
+这不是一套“解释架构世界的理论”，
+而是一套“用形式化方式约束设计空间的规则集”。
+在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。
 
 本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。使用简单的几条规约，指导架构师构建出合理的软件架构。
 
