--- a/readme
+++ b/readme
@@ -69,7 +69,7 @@
 
 注意:
 一个子可以有多个父
-一个对象在不同上下文中会有不同身份
+一个对象在不同上下文中会有不同身份(身份是取决于参考系的)
 
 
 
@@ -145,17 +145,6 @@
 
 欢迎讨论完善：此想法开放讨论，欢迎提出改进意见，但请注意这只是一个初步构思。
 
-不适用场景
-
-快速原型开发
-
-一次性脚本或工具
-
-UI/前端快速迭代开发
-
-需求高度不确定的项目
-
-记录信息
 
 提出背景：形式化组件化内核开发过程中的思考总结
 
