--- a/readme
+++ b/readme
@@ -18,7 +18,9 @@
 
 我记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
 
-它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读，并让ai基于它的约束写一些代码。您可以迅速理解它有什么用途
+它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。
+
+你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
 
 
 设想:
