--- a/readme
+++ b/readme
@@ -3,14 +3,15 @@
 
 说明
 
-这是一个初步的软件架构设计想法，首次系统性地提出基于图论约束的软件架构设计层级的规约。
+这是一个初步的软件架构设计想法。
 
-本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为架构设计这一抽象且主观的工作，进行数学上的指导。
+本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为架构设计这一抽象且主观的工作，进行数学视角上的指导。
 而不只是基于软件工程中的主观的评判和描述，和纯粹的经验。
 
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
 在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。
+它不关注具体算法实现，只关注架构设计。
 
 本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。使用简单的几条规约，指导架构师构建出合理的软件架构。
 
@@ -37,13 +38,6 @@
 2 架构拓扑的结构属性
 3 抽象层次的组织关系
 
-2 本规约不直接约束的层面（What it does NOT govern）
-
-1 具体算法实现
-2 所有权和内存管理策略
-3 并发和同步机制
-4 性能优化细节
-5 具体技术选型
 
 
 
