--- a/readme
+++ b/readme
@@ -11,7 +11,8 @@
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
 在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。
-它不关注具体算法实现，只关注架构设计。
+
+它不关注具体算法实现，只关注架构设计。但是它可以在宏观架构层面帮助你去简化并分析和处理内存安全，并发安全等问题。
 
 本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。使用简单的几条规约，指导架构师构建出合理的软件架构。
 
