--- a/readme
+++ b/readme
@@ -64,6 +64,7 @@
  
 此时我们可以以一个节点为中心，通过强弱依赖关系，提取一个子图，获取所有的对象节点，以及这些节点的父子关系的边。
 
+补充:
 此外这里还要进行一些补充防止误解，因为许多常见的程序执行并不是直观的面向对象，所以我们要对它进行拓扑:
 
 1.首先，比如依赖注入，获取一个函数指针。那么我们分析时可以对函数指针看作强依赖关系，而持有函数指针的对象看作强依赖一个虚拟的对象。
@@ -71,6 +72,10 @@
 2.对于无对象操作的比如malloc，它们可以看作和传入一个全局的对象句柄等价。
 3.对于像string sin一类无需传入对象的，可以看作它们拥有一个隐藏的叶子的无依赖的对象。
 
+注意:
+一个子可以有多个父
+一个对象在不同上下文中会有不同身份
+(身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查)
 
 
 
@@ -79,10 +84,11 @@
 2.不得存在孤岛
 3.任意一祖先节点到任意子孙节点必须可达
 
-注意:
-一个子可以有多个父
-一个对象在不同上下文中会有不同身份
-(身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查)
+
+
+如何使用:
+它并不是让你架构设计完成后再去验证。而是要在完全理解它后，基于它去执行架构的设计。
+你可以从没有依赖的叶子开始，增量化地构建系统。这或许非常抽象，但是它一定会给你带来健壮的架构
 
 
 
