--- a/readme
+++ b/readme
@@ -72,18 +72,16 @@
 2.对于无对象操作的比如malloc，它们可以看作和传入一个全局的对象句柄等价。
 3.对于像string sin一类无需传入对象的，可以看作它们拥有一个隐藏的叶子的无依赖的对象。
 
-注意:
-一个子可以有多个父
-一个对象在不同上下文中会有不同身份
-(身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查)
-
-
 
 要求:
 1.在这个子图中，所有的祖先节点必须相对于中心节点为弱依赖。而所有子孙节点必须相对于中心节点为强依赖
 2.不得存在孤岛
 3.任意一祖先节点到任意子孙节点必须可达
 
+注意:
+一个子可以有多个父
+一个对象在不同上下文中会有不同身份
+(身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查，必须保证所有的上下文中都满足规约)
 
 
 如何使用:
