--- a/readme
+++ b/readme
@@ -80,8 +80,9 @@
 
 注意:
 一个子可以有多个父
-一个对象在不同上下文中会有不同身份
-(身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查，必须保证所有的上下文中都满足规约)
+一个对象在不同上下文中会有不同身份。
+身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查，必须保证所有的上下文中都满足规。
+
 
 
 如何使用:
