--- a/readme
+++ b/readme
@@ -157,9 +157,9 @@
 
 免责声明
 
-请勿直接用于生产：未经充分验证，请勿将此规约直接用于实际项目开发。
+未经工业级的生产实践验证，请勿将此规约直接用于实际项目开发。
 
-作者不承担责任：作者对使用此想法可能造成的任何损失或问题不承担责任。
+作者对使用此想法可能造成的任何损失或问题不承担责任。
 
 欢迎讨论完善：此想法开放讨论，欢迎提出改进意见，但请注意这只是一个初步构思。
 
