--- a/readme
+++ b/readme
@@ -7,6 +7,8 @@
 
 本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为架构设计这一抽象且主观的工作，进行数学视角上的指导。
 而不只是基于软件工程中的主观的评判和描述，和纯粹的经验。
+我记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
+
 
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
@@ -14,15 +16,11 @@
 
 它不关注具体算法实现，只关注架构设计。但是它可以在宏观架构层面帮助你去简化并分析和处理内存安全，并发安全等问题。
 
-本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。使用简单的几条规约，指导架构师构建出合理的软件架构。
+本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。
 
-如果一个架构设计符合它，那么它大概率是一个好的架构。如果一个架构不符合它，它就有可能存在架构问题。
+面向高复杂度系统的形式化架构设计工具，它提供了一个框架，可以帮助架构师在理解并接受这些规则后，通过数学推导来设计出 健壮、可验证 的架构
 
-我记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
-
-它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。
-
-你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
+它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
 
 它的使用对于架构师或程序员来说是需要一定门槛的,否则无法正确驾驭它。
 需要拥有明确的面向对象的架构思想和原子性功能划分的能力
@@ -176,7 +174,7 @@
 这意味着弱依赖只是强依赖路径的一个“快捷方式”或“视图投影”。它不能引入原图中不存在的因果关系。
 3. 规约三与四：拉回 (Pullback) 与 交换图表 (Commutative Diagram)
 
- 上下文子图 Gx​ 的构造，实际上是在进行极限 (Limits) 的演算：
+   上下文子图 Gx​ 的构造，实际上是在进行极限 (Limits) 的演算：
 
     Gx 的连通性： 在范畴论中，这意味着子图必须是一个连通范畴。
 
