--- a/readme
+++ b/readme
@@ -3,22 +3,17 @@
 
 说明
 
-这是一个初步的软件架构设计想法。
+这是一个初步的软件架构设计想法。尚未经过全面验证和工程实践，仅供研究和讨论参考。
 
-本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为架构设计这一抽象且主观的工作，进行数学视角上的指导。
-而不只是基于软件工程中的主观的评判和描述，和纯粹的经验。
-我记录此想法以作备忘，尚未经过全面验证和工程实践，仅供研究和讨论参考。
-
+本文档尝试提出一个，基于图论构建的，通用的关系描述模式，从而在数学视角上，为软件工程中架构设计这一抽象且主观的工作，提供数学视角上的指导。
 
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
-在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。
+在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。并且极大程度上消灭代码腐坏问题。
 
 它不关注具体算法实现，只关注架构设计。但是它可以在宏观架构层面帮助你去简化并分析和处理内存安全，并发安全等问题。
 
-本文章在尝试寻找一个通用简单的约束范式，让架构设计能够变为形式化的开发的工程。
-
-面向高复杂度系统的形式化架构设计工具，它提供了一个框架，可以帮助架构师在理解并接受这些规则后，通过数学推导来设计出 健壮、可验证 的架构
+它是一个面向高复杂度系统的形式化架构设计工具，它提供了一个框架，可以帮助架构师在理解并接受这些规则后，通过数学推导来设计出 健壮、可验证 的架构
 
 它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
 
@@ -32,7 +27,7 @@
 1 模块间依赖关系的性质
 2 架构拓扑的结构属性
 3 抽象层次的组织关系
-
+4.它不关注具体算法实现 
 
 通俗表述:
 
@@ -69,8 +64,6 @@
 一个子可以有多个父
 一个对象在不同上下文中会有不同身份。
 身份是取决于参考系的,而非固定不变的，规约需要对所有的节点的以各自为中心的上下文都进行审查，必须保证所有的上下文中都满足规。
-
-
 
 如何使用:
 它并不是让你架构设计完成后再去验证。而是要在完全理解它后，基于它去执行架构的设计。
