--- a/readme
+++ b/readme
@@ -177,6 +177,36 @@
 
 
 
+
+常见问题:
+1.如果存在两个对象，假如是两台服务器相互收发信息，那么要怎么表述?
+答:在两个对象间插入一个共有的父节点作为中心的数据交换的节点，它会负责被引用，以满足规约
+
+2.依赖注入如何处理，如何架构设计
+
+答:依赖注入分析时，先处理持有函数指针的节点，假设它强依赖于一个虚拟的节点。你可以将它看作一个没有依赖的节点而忽略它，或者引入会注入的依赖的共同依赖，从而执行上下文分析。
+在完成这些节点框架的创建后，再去构建被注入的依赖。
+你在构建依赖时，你会发现你依然还是遵守一样的原则进行分析。
+
+
+3.对于中断路由之类如何处理
+很明显还是和依赖注入是完全一致的
+
+4.对于操作全局寄存器怎么处理
+寄存器这类共享资源本身就是一个节点
+
+5.它是否会影响性能
+在本人的测试中大部分情况下它并不会带来严重的性能影响。
+它会需要你去写更多代码，但是大部分情况下，编译器会为你优化它。
+但是它不是万能的，它不代表一定性能最优。
+
+5.总结:
+如果遇到难以解释的架构，您可以尝试转变一下思维方式，找到符合约束的功能相同的架构。这便是它的难点
+
+
+
+
+
 免责声明
 
 未经工业级的生产实践验证，请勿将此规约直接用于实际项目开发。
@@ -185,20 +215,3 @@
 
 欢迎讨论完善：此想法开放讨论，欢迎提出改进意见，但请注意这只是一个初步构思。
 
-
-
-
-问题:
-1.如果存在两个对象，假如是两台服务器相互收发信息，那么要怎么表述?
-答:在两个对象间插入一个共有的父节点作为中心节点以满足规约
-
-2.依赖注入如何处理，如何架构设计
-答:依赖注入分析时，先处理持有函数指针的节点，假设它强依赖于一个虚拟的节点。
-在完成它们的创建后，再去构建注入的依赖。此时你再把依赖连接到这个持有函数指针的节点时，就能发现它还是一样分析。
-那么谁来将依赖注入呢，很明显是持有函数指针的某一个子孙。
-
-3.对于中断路由之类如何处理
-很明显还是和依赖注入是完全一致的
-
-4.对于操作全局寄存器怎么处理
-寄存器这类共享资源本身就是一个节点
