--- a/readme
+++ b/readme
@@ -43,7 +43,7 @@
 首先，我们强制面向对象。那么在c语言中，一个对象的定义就是，一个结构体和它的专用操作函数构成的集合。要求，每一个对象对外都是黑盒。  
 
 然后我们来定义强依赖。如果一个对象内部嵌入了另一个对象本身，或者它的成员函数调用了另一个对象的操作函数，那么它就是强依赖。 
-如果一个对象只持有了另一个对象的指针，比如只持有句柄。但是它不直接使用它。那么它就是弱依赖。       
+如果一个对象只持有了另一个对象的指针，比如只持有句柄。但是它不直接使用它(不使用它的操作函数,只负责存储指针)。那么它就是弱依赖。       
 
 在整个架构中，所有的强依赖关系的集合构建出父子关系。比如a强依赖于b，那么b就是a的父亲。 
 在以一个对象为中心的视角中，它的弱依赖对象一定是它的祖先，而强依赖必须是它的子孙。
@@ -59,7 +59,7 @@
 
 1.首先，比如依赖注入，获取一个函数指针。那么我们分析时可以对函数指针看作强依赖关系，而持有函数指针的对象看作强依赖一个虚拟的对象。
 被作为函数指针注入的对象可以独立分析，它依然是一个或多个节点的集合.
-2.对于无对象操作的比如malloc，它们可以看作和传入一个全局的对象句柄等价。
+2.对于无明确对象操作的比如malloc，实际上和操作一个全局的对象句柄完全等价。
 3.对于像string sin一类无需传入对象的，可以看作它们拥有一个隐藏的叶子的无依赖的对象。
 
 
