--- a/readme
+++ b/readme
@@ -15,7 +15,9 @@
 
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
-它会告诉你为什么会有一个模块，它为什么会在哪里。
+
+它会告诉你为什么会有一个模块，它为什么会在那里，为什么能在那里。
+
 在接受这些约束的前提下，它能显著提高架构的清晰度和可靠性。并且极大程度上消灭代码腐坏问题。
 
 它不关注具体算法实现，只关注架构设计。但是它可以在宏观架构层面帮助你去简化并分析和处理内存安全，并发安全等问题。
