--- a/readme
+++ b/readme
@@ -8,6 +8,9 @@
 这不是一套“解释架构世界的理论”，
 而是一套“用形式化方式约束设计空间的规则集”。
 它会告诉你一个对象凭什么存在，究竟有什么因果。
+
+所有长期成功的软件架构，都是“可以被无歧义描述的”，而使用它推理出的架构也同时能够被它使用数学无歧义地表达出来。
+
 它的使用对于架构师或程序员来说是需要一定门槛的,否则无法正确驾驭它。
 需要拥有明确的面向对象的架构思想和原子性功能划分的能力
 它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
@@ -90,16 +93,3 @@
 5.总结:
 如果遇到认为难以解释的架构，就说明它可能并不是很合适，
 您需要转变思维方式，找到符合约束的功能相同的架构。这会很抽象，但是这也是它的难点。
-
-
-
-
-
-免责声明
-
-未经工业级的生产实践验证，请勿将此规约直接用于实际项目开发。
-
-作者对使用此想法可能造成的任何损失或问题不承担责任。
-
-欢迎讨论完善：此想法开放讨论，欢迎提出改进意见，但请注意这只是一个构思。
-
