--- a/readme
+++ b/readme
@@ -16,7 +16,7 @@
 
 本文档尝试提出一个，基于图论构建的架构的描述模式，他不一定能描述所有架构，但是能够帮助你基于数学而不是经验，无歧义且思维一致地，推理出一个架构，并且让推理出的这个架构能够被它本身无歧义地建模。
 
-它就和软件工程里的指标一样，你的代码不一定需要它。但是它可以作为在架构建模上的一个初步探索。
+它就和软件工程里的指标一样，你的代码不一定需要它。但是它可以作为在本人所认为的新的软件工程的开发模式下的一个初步探索。
 
 它的使用对于架构师或程序员来说是需要一定门槛的,否则无法正确驾驭它。
 需要拥有明确的面向对象的架构思想和原子性功能划分的能力
