--- a/readme
+++ b/readme
@@ -60,7 +60,7 @@
 补充:
 此外这里还要进行一些补充防止误解，因为许多常见的程序执行并不是直观的面向对象，所以我们要对它进行拓扑:
 1.首先，比如依赖注入，获取一个函数指针。那么我们分析时可以对函数指针看作强依赖关系，而持有函数指针的对象看作强依赖一个虚拟的对象。
-被作为函数指针注入的对象可以独立分析，它依然是一个或多个节点的集合.或者如果函数指针必须去获取被注入对象，则看作一个整体。
+被作为函数指针注入的对象可以独立分析，它依然是一个或多个节点的集合.或者如果函数指针必须去获取持有函数指针对象，则可以看作一个整体。 
 
 2.对于无明确对象操作的比如malloc，实际上和操作的是一个全局的对象句柄，所以和操作对应的对象完全等价。
 3.对于像string sin一类无需传入对象的，可以看作它们拥有一个隐藏的叶子的无额外依赖的对象，调用了他们就是强依赖。
