--- a/readme
+++ b/readme
@@ -9,10 +9,9 @@
 本人认为它们的本质，就是去约束软件的架构设计，让它们可以更容易被人无歧义地理解。
 
 所以我认为软件工程的各项指标并不是说要让你学习代码应该怎么做，而是怎么样能够被人类理解。
+长期成功的软件架构，是应该“可以被无歧义描述的”，而使用推理出它的架构的模型也应该同时能使用数学将它无歧义地表达出来。
+为此需要采用数学模型来无歧义地描述它。当然，因为软件有无限可能，数学模型也必然无法包含它的一切。我认为或许未来描述一个软件的架构，或许需要多种不同的数学模型。
 
-所以我认为我们现需要采用数学模型来无歧义地描述它。当然，因为软件有无限可能，数学模型也必然无法包含它的一切。我认为或许未来描述一个软件的架构，或许需要多种不同的数学模型。
-
-所有长期成功的软件架构，都是“可以被无歧义描述的”，而使用推理出它的架构的模型也应该同时能使用数学将它无歧义地表达出来。
 
 本文档尝试提出一个，基于图论构建的架构的描述模式，他不一定能描述所有架构，但是能够帮助你基于数学而不是经验，无歧义且思维一致地，推理出一个架构，并且让推理出的这个架构能够被它本身无歧义地建模。
 
@@ -20,7 +19,7 @@
 
 它的使用对于架构师或程序员来说是需要一定门槛的,否则无法正确驾驭它。
 需要拥有明确的面向对象的架构思想和原子性功能划分的能力
-它的表述可能比较晦涩，冗长，因为它只是为了记录而写的初稿。你可以将它交给ai解读，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
+因为它只是为了记录而写的初稿。你可以复制它作为ai的提示词，并让ai基于它的约束尝试多写一些代码。处理一些场景。您可以迅速理解它有什么用途。
 
 它假设采用文档先行的开发模式，场景为高可靠场景
 
